<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="16dp">

            <ImageView
                    android:id="@+id/id_add_food_avatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/food_avatar"
                    android:layout_marginTop="16dp"
                    android:layout_gravity="center_horizontal"
                    android:onClick="uploadImage"/>

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/id_add_food_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/add_food_name"
                    android:inputType="text"
                    android:imeOptions="actionNext"/>

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/id_add_food_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/add_food_desc"
                    android:inputType="textMultiLine"
                    android:imeOptions="actionDone"/>

            <TextView
                    android:id="@+id/id_add_food_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="8dp"
                    android:hint="@string/add_food_date"
                    android:padding="8dp"
                    android:background="@color/grey_color"/>

        </LinearLayout>

        <TextView
                android:id="@+id/id_add_food_save_dish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:layout_gravity="center_horizontal"
                android:padding="8dp"
                android:layout_margin="16dp"
                android:text="@string/add_food_save"
                android:textColor="@color/white_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:onClick="saveDish"/>

    </android.support.constraint.ConstraintLayout>
</layout>