<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/common_side_padding">

        <TextView
                android:id="@+id/id_add_grocery_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_grocery_title_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <EditText
                android:id="@+id/id_add_grocery_title_edit"
                android:layout_width="@dimen/add_grocery_title"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:imeOptions="actionDone"
                android:lines="1"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                app:layout_constraintStart_toEndOf="@id/id_add_grocery_title_text"
                app:layout_constraintTop_toTopOf="parent"/>

        <Button
                android:id="@+id/id_add_grocery_add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id_add_grocery_title_edit"
                android:onClick="addNewItem"
                android:text="@string/add_grocery_item"
                android:layout_marginTop="@dimen/common_side_padding"/>

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_side_padding"
                app:layout_constraintTop_toBottomOf="@+id/id_add_grocery_add_button">

            <LinearLayout
                    android:id="@+id/id_add_grocery_insert_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"/>

        </ScrollView>

        <Button
                android:id="@+id/id_add_grocery_save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_grocery_save"
                android:onClick="saveGroceryItem"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

    </android.support.constraint.ConstraintLayout>

</layout>